--- a/about.html
+++ b/about.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="about.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">  
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <title>About Me</title>
 </head>
 <body>
@@ -14,7 +16,6 @@
         <div id="navbar-left">
             <a class="active" href=index.html>Home</a>
             <a href=about.html>About Me</a>
-            <a href="#portfolio">Portfolio</a>
             <a href="contact.html">Contact</a>
         </div>
         <div id="navbar-right">
@@ -24,13 +25,14 @@
         </div>
     </div>
     <header>
-        <div class="intro-text">
+        
+       <div class="intro-text">
             
             <h1>About me</h1>
-            <h3>Hi, I am Sam! A bilingual, 2nd generation Latina native to the San Francisco Bay Area.<br> I have always been one chasing the creativity in this world. Growing up, I would love<br> to create and help others. 
-                My internet life started when I was just 9years old and<br> I got to pick out my first computer at the Gateway store. I remember it vividly as it<br> came in a huge cow print box!<br>Fast forward a few years when Myspace popped up, my 12 year old self started spending<br> time trying towork with the layout codes so I could come up with cool looking porfolios.<br> Thats where the interest for design first began. The first time I interacted with code,<br> to create simple layouts and learning to understand the code behind designs.<br>I had no idea that later on in my 20’s I would come back to something similar and fall<br> in love. I decided to take the self-taught route and learn how to code in 2020 in the midst<br> of our Global Pandemic and quarintine life. COVID caused me to be laid off. This is where I<br> started to believe I wanted so much more than what I was currently doing.<br>Today, I am a self-taught Web Designer & Developer. Using HTML, CSS, and Javascript.<br> With a drive to help people and seeking opportunities for growth and creation!
+            <h3><span> Hi, I am Sam! A bilingual, 2nd generation Latina native to the San Francisco Bay Area.  <br> I have always been one chasing the creativity in this world. Growing up, I would love <br> to create and help others. 
+                My internet life started when I was just 9years old and<br> I got to pick out my first computer at the Gateway store. I remember it vividly as it<br> came in a huge cow print box!<br>Fast forward a few years when Myspace popped up, my 12 year old self started spending<br> time trying to work with the layout code so I could come up with cool looking porfolios.<br> Thats where the interest for design first began. The first time I interacted with code,<br> to create simple layouts and learning to understand the code behind designs.<br>I had no idea that later on in my 20’s I would come back to something similar and fall<br> in love. I decided to take the self-taught route and learn how to code in 2020 in the midst<br> of our Global Pandemic and quarintine life. COVID caused me to be laid off. This is where I<br> started to believe I wanted so much more than what I was currently doing.<br>Today, I am a self-taught Web Designer & Developer. Using HTML, CSS, and Javascript.<br> With a drive to help people and seeking opportunities for growth and creation!
 
-                <br>Stay updated on what I am currently doing.<br> Follow my journey on Instagram to stay updated @iam.sam.codes</h3>
+                <br>Stay updated on what I am currently doing.<br> Follow my journey on Instagram to stay updated <a href="https://www.instagram.com/iam.sam.codes/">@iam.sam.codes</a></span></h3>
         </div>
 
         <div class="portrait">
